Adjusting BinarySearch tests.
Also appeasing github-actions bot.